doc: coupon part added.

--- a/详细设计文档.md
+++ b/详细设计文档.md
@@ -10,6 +10,7 @@
 | 黄婉红  | 2020.06.22| 添加adminbl和userbl模块部分| V1.0.1|
 | 王海辰| 2020.06.23 | 添加orderbl模块部分|V1.0.2|
 | 项卓奇| 2020.06.23 | 添加hotelbl模块部分|V1.0.3|
+|  钱支鑫  | 2020.06.23 | 添加couponbl模块部分 | V1.0.4 |
 
 ## 目录
 <!-- TOC -->
@@ -342,8 +343,407 @@ AdminServiceImpl的接口规范如下表所示：
 
 利用委托式控制风格，每个界面需要访问的业务逻辑由各自的ServiceImpl委托给不同的领域对象。
 
-#### 4.1.2 couponbl模块(qzx)
-#### 4.1.3 hotelbl模块(xzq)
+#### 4.1.2 couponbl模块
+
+（1）模块描述
+
+    couponbl模块承担的需求参见需求规格说明文档功能需求及相关非功能需求。
+    couponbl模块的职责及接口参见系统体系结构描述文档。
+    
+（2）整体结构
+
+根据体系结构的设计，我们使用分层的模式来构建本系统，将系统分为web展示层、restful api层、业务逻辑层、数据层。每一层之间为了增加灵活性，我们会
+添加接口。restful api层和业务逻辑层之间添加controller.coupon.CouponController接口，controller.coupon.CouponController接口通过调用
+bl.coupon.CouponService接口和bl.coupon.CouponMatchStratrgy接口实现。业务逻辑层和数据层之间添加data.coupon.CouponMapper接口。
+这样，我们将依赖于接口而非实体类，增加了系统的灵活性。
+
+couponbl模块的设计如下图所示：
+![couponbl模块设计图]()
+
+adminbl模块各个类的职责如下表所示：
+
+|  模块 |  职责 |
+| :-----: | :-----: |
+|CouponService|接口类，负责提供优惠策略相关操作的接口|
+|CouponServiceImpl|负责实现优惠策略相关操作|
+|User|系统用户的领域模型对象，拥有使用者的身份信息，可以用于核验身份并提供相应身份的服务|
+
+（3）模块内部类的接口规范
+CouponServiceImpl的接口规范如下表所示：
+
+<table class="lake-table">
+  <tbody>
+    <tr>
+      <td colspan="3" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p><strong>提供的服务（供接口）</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td rowspan="3" colspan="1" style="text-align: center;">
+        CouponServiceImpl.getMatchOrderCoupon
+      </td>
+      <td style="text-align: center;">
+        语法
+      </td>
+      <td style="text-align: center;">
+        List<Coupon> getMatchOrderCoupon(OrderVO orderVO)
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: center;">
+        前置条件
+      </td>
+      <td style="text-align: center;">
+        客户新建一个订单
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: center;">
+        后置条件
+      </td>
+      <td style="text-align: center;">
+        返回数据库中符合条件的优惠策略
+      </td>
+    </tr>
+    <tr>
+      <td rowspan="3" colspan="1" style="text-align: center;">
+        CouponServiceImpl.getHotelAllCoupon
+      </td>
+      <td colspan="1" style="text-align: center;">
+        语法
+      </td>
+      <td colspan="1" style="text-align: center;">
+       List<Coupon> getHotelAllCoupon(Integer hotelId)
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        前置条件
+      </td>
+      <td colspan="1" style="text-align: center;">
+        存在相应的酒店数据
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        后置条件
+      </td>
+      <td colspan="1" style="text-align: center;">
+        以列表形式返回所有酒店优惠策略
+      </td>
+    </tr>
+     <tr>
+          <td rowspan="3" colspan="1" style="text-align: center;">
+            CouponServiceImpl.getWebsiteAllCoupons
+          </td>
+          <td colspan="1" style="text-align: center;">
+            语法
+          </td>
+          <td colspan="1" style="text-align: center;">
+           List<Coupon> getWebsiteAllCoupons()
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            前置条件
+          </td>
+          <td colspan="1" style="text-align: center;">
+            无
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            后置条件
+          </td>
+          <td colspan="1" style="text-align: center;">
+            以列表形式返回所有网站优惠策略
+          </td>
+        </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        CouponServiceImpl.addHotelTargetMoneyCoupon
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        CouponVO addHotelTargetMoneyCoupon(HotelTargetMoneyCouponVO couponVO)
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>无</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>添加满减优惠策略</p>
+      </td>
+    </tr>
+    <tr>
+          <td colspan="1" rowspan="3" style="text-align: center;">
+            CouponServiceImpl.addHotelBirthdayCoupon
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>语法</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            CouponVO addHotelBirthdayCoupon(HotelBirthdayCouponVO couponVO);
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>前置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>无</p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>后置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>添加生日优惠策略</p>
+          </td>
+        </tr>
+        <tr>
+              <td colspan="1" rowspan="3" style="text-align: center;">
+                CouponServiceImpl.addHotelTimeCoupon
+              </td>
+              <td colspan="1" style="text-align: center;">
+                <p>语法</p>
+              </td>
+              <td colspan="1" style="text-align: center;">
+                CouponVO addHotelTimeCoupon(HotelTimeCouponVO couponVO);
+              </td>
+            </tr>
+            <tr>
+              <td colspan="1" style="text-align: center;">
+                <p>前置条件</p>
+              </td>
+              <td colspan="1" style="text-align: center;">
+                <p>无</p>
+              </td>
+            </tr>
+            <tr>
+              <td colspan="1" style="text-align: center;">
+                <p>后置条件</p>
+              </td>
+              <td colspan="1" style="text-align: center;">
+                <p>添加限时优惠策略</p>
+              </td>
+            </tr>
+            <tr>
+                  <td colspan="1" rowspan="3" style="text-align: center;">
+                    CouponServiceImpl.addHotelMultiRoomCoupon
+                  </td>
+                  <td colspan="1" style="text-align: center;">
+                    <p>语法</p>
+                  </td>
+                  <td colspan="1" style="text-align: center;">
+                    CouponVO addHotelMultiRoomCoupon(HotelMultiRoomCouponVO couponVO);
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="1" style="text-align: center;">
+                    <p>前置条件</p>
+                  </td>
+                  <td colspan="1" style="text-align: center;">
+                    <p>无</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="1" style="text-align: center;">
+                    <p>后置条件</p>
+                  </td>
+                  <td colspan="1" style="text-align: center;">
+                    <p>添加多间优惠策略</p>
+                  </td>
+                </tr>
+    <tr>
+      <td colspan="1" rowspan="3" style="text-align: center;">
+        <p>CouponServiceImpl.cancelCoupon</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>语法</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p> ResponseVO cancelCoupon(Integer couponId)</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>前置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>数据库中存在对应的优惠策略</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center;">
+        <p>后置条件</p>
+      </td>
+      <td colspan="1" style="text-align: center;">
+        <p>删除该优惠策略</p>
+      </td>
+    </tr> 
+    <tr>
+          <td colspan="1" rowspan="3" style="text-align: center;">
+            <p>CouponServiceImpl.getCouponById</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>语法</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p> Coupon getCouponById(int couponId);</p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>前置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>数据库中存在对应的优惠策略</p>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="1" style="text-align: center;">
+            <p>后置条件</p>
+          </td>
+          <td colspan="1" style="text-align: center;">
+            <p>返回该ID对应的优惠策略</p>
+          </td>
+        </tr> 
+    <tr>
+      <td colspan="3" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p><strong>需要的接口（需接口）</strong></p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>vo.ResponseVO</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>检查调用是否成功</p>
+      </td>
+    </tr>
+    <tr>
+       <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+          <p>vo.CouponVO</p>
+       </td>
+       <td rowspan="1" colspan="2" style="text-align: center;">
+          <p>优惠策略类</p>
+       </td>
+    </tr>
+    <tr>
+           <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+              <p>vo.HotelBirthdayCouponVO</p>
+           </td>
+           <td rowspan="1" colspan="2" style="text-align: center;">
+              <p>生日特惠类</p>
+           </td>
+        </tr>
+        <tr>
+               <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+                  <p>vo.HotelMultiRoomCouponVO</p>
+               </td>
+               <td rowspan="1" colspan="2" style="text-align: center;">
+                  <p>多间优惠类</p>
+               </td>
+            </tr>
+            <tr>
+                   <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+                      <p>vo.HotelTargetMoneyCouponVO</p>
+                   </td>
+                   <td rowspan="1" colspan="2" style="text-align: center;">
+                      <p>多间优惠类</p>
+                   </td>
+                </tr>
+    <tr>
+           <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+              <p>vo.HotelTimeCouponVO</p>
+           </td>
+           <td rowspan="1" colspan="2" style="text-align: center;">
+              <p>限时优惠类</p>
+           </td>
+        </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>po.Coupon</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>优惠策略类</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>CouponMapper.insertCoupon(Coupon coupon)</p>
+      </td>
+      <td rowspan="1" colspan="2" style="text-align: center;">
+        <p>新增一个优惠策略对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>CouponMapper.selectByHotelId(int hotelId)</p>
+      </td>
+      <td colspan="2" style="text-align: center; background-color: #FFFFFF;">
+        <p>以列表形式获取所有hotelId为对应值的优惠策略对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p> CouponMapper.moveCoupon(int couponId)</p>
+      </td>
+      <td colspan="2" style="background-color: #FFFFFF; text-align: center;">
+        <p>根据优惠策略ID删除一个优惠策略对象</p>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="1" style="text-align: center; background-color: #FFFFFF;">
+        <p>CouponMapper.selectCouponById(int couponId)</p>
+      </td>
+      <td colspan="2" rowspan="1" style="text-align: center; background-color: #FFFFFF;">
+         以列表形式获取CouponId为对应值的优惠策略对象
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+(4)业务逻辑层的动态模型
+
+下图表明了NJUSE酒店管理系统中，当酒店管理员或网站营销人员添加生日优惠策略时，优惠策略业务逻辑处理的相关对象之间的协作。
+
+![](http://212.64.68.219:9090/添加生日优惠策略.jpg)
+
+下图表明了NJUSE酒店管理系统中，当酒店管理员或网站营销人员添加满减优惠策略时，优惠策略业务逻辑处理的相关对象之间的协作。
+![](http://212.64.68.219:9090/添加满减优惠策略.jpg)
+
+下图表明了NJUSE酒店管理系统中，当酒店管理员或网站营销人员添加多间优惠策略时，优惠策略业务逻辑处理的相关对象之间的协作。
+![](http://212.64.68.219:9090/添加多间优惠策略.jpg)
+
+下图表明了NJUSE酒店管理系统中，当酒店管理员或网站营销人员添加限时优惠策略时，优惠策略业务逻辑处理的相关对象之间的协作。
+![](http://212.64.68.219:9090/添加限时优惠策略.jpg)
+
+下图表明了NJUSE酒店管理系统中，当酒店页面需要获取酒店所有优惠策略时，优惠策略业务逻辑处理的相关对象之间的协作。
+![](http://212.64.68.219:9090/获取酒店所有优惠策略.jpg)
+
+下图表明了NJUSE酒店管理系统中，当酒店管理员或网站营销人员删除优惠策略时，优惠策略业务逻辑处理的相关对象之间的协作。
+![](http://212.64.68.219:9090/删除优惠策略.jpg)
+
+(5)业务逻辑层的设计原理
+
+利用委托式控制风格，每个界面需要访问的业务逻辑由各自的ServiceImpl委托给不同的领域对象。
+
+#### 4.1.3 hotelbl模块
+
 （1）模块描述
 
     hotelbl模块承担地需求参见需求规格说明文档功能需求及相关非功能需求。
