--- a/详细设计文档.md
+++ b/详细设计文档.md
@@ -1104,12 +1104,23 @@ RoomServiceImpl的接口规范如下表所示：
 
 下图表明了NJUSE酒店管理系统中，当网站管理员填写好需要添加的用户表单时，网站管理员业务逻辑处理的相关对象之间的协作。
 
-![addManager动态模型]()
-
-
 (5)业务逻辑层的设计原理
 
 利用委托式控制风格，每个界面需要访问的业务逻辑由各自的ServiceImpl委托给不同的领域对象。
+
+下图表明了NJUSE酒店管理系统中，当酒店管理员填写好需要添加的用户表单时，酒店管理员业务逻辑处理的相关对象之间的协作。
+
+![addHotel动态模型](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%B7%BB%E5%8A%A0%E7%AE%A1%E7%90%86%E5%91%98.png)
+
+下图表明了NJUSE酒店管理系统中，当网站管理员填需要获取房间信息时，酒店管理员业务逻辑处理的相关对象之间的协作。
+
+![retrieveHotelDetails](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E8%8E%B7%E5%8F%96%E7%AE%A1%E7%90%86%E5%91%98.png)
+
+下图表明了NJUSE酒店管理系统中，当酒店管理员填需要删除删除信息时，酒店管理员业务逻辑处理的相关对象之间的协作。
+![moveUser](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E5%88%A0%E9%99%A4%E7%94%A8%E6%88%B7.png)
+
+下图表明了NJUSE酒店管理系统中，当酒店管理员录入可用房间时，酒店管理员业务逻辑处理的相关对象之间的协作。
+![retrieveHotelRoomInfo](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%94%B9%E5%8F%98%E9%85%92%E5%BA%97%E7%AE%A1%E7%90%86%E5%91%98.png)
 #### 4.1.4 orderbl模块
 
 ##### 需要的服务
