--- a/详细设计文档.md
+++ b/详细设计文档.md
@@ -1510,17 +1510,29 @@ RoomServiceImpl的接口规范如下表所示：
 
 下图表明了NJUSE酒店管理系统中，当酒店管理员填写好需要添加的用户表单时，酒店管理员业务逻辑处理的相关对象之间的协作。
 
-![addHotel动态模型](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%B7%BB%E5%8A%A0%E7%AE%A1%E7%90%86%E5%91%98.png)
+![addHotel动态模型](http://212.64.68.219:9090/addHotel.png)
 
 下图表明了NJUSE酒店管理系统中，当网站管理员填需要获取房间信息时，酒店管理员业务逻辑处理的相关对象之间的协作。
 
-![retrieveHotelDetails](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E8%8E%B7%E5%8F%96%E7%AE%A1%E7%90%86%E5%91%98.png)
+![retrieveHotelDetails](http://212.64.68.219:9090/retireHotel.png)
+
+下图表明了NJUSE酒店管理系统中，当管理员填需要获取命令列表时，管理员业务逻辑处理的相关对象之间的协作。
+
+![retrieveHotelDetails](http://212.64.68.219:9090/getHotelOrders.png)
+
+下图表明了NJUSE酒店管理系统中，当管理员填需要查找酒店时，管理员业务逻辑处理的相关对象之间的协作。
+
+![retrieveHotelDetails](http://212.64.68.219:9090/sortHotel.png)
+
+下图表明了NJUSE酒店管理系统中，当管理员填需要排序酒店时，管理员业务逻辑处理的相关对象之间的协作。
+
+![retrieveHotelDetails](http://212.64.68.219:9090/searchHotel.png)
 
 下图表明了NJUSE酒店管理系统中，当酒店管理员填需要删除删除信息时，酒店管理员业务逻辑处理的相关对象之间的协作。
-![moveUser](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E5%88%A0%E9%99%A4%E7%94%A8%E6%88%B7.png)
+![moveUser](http://212.64.68.219:9090/%E5%88%A0%E9%99%A4%E6%88%BF%E9%97%B4.png)
 
 下图表明了NJUSE酒店管理系统中，当酒店管理员录入可用房间时，酒店管理员业务逻辑处理的相关对象之间的协作。
-![retrieveHotelRoomInfo](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%94%B9%E5%8F%98%E9%85%92%E5%BA%97%E7%AE%A1%E7%90%86%E5%91%98.png)
+![retrieveHotelRoomInfo](http://212.64.68.219:9090/%E6%8F%92%E5%85%A5%E6%88%BF%E9%97%B4%E4%BF%A1%E6%81%AF.png)
 #### 4.1.4 orderbl模块
 
 ##### 需要的服务
