feat: hotel done

--- a/详细设计文档.md
+++ b/详细设计文档.md
@@ -1510,29 +1510,54 @@ RoomServiceImpl的接口规范如下表所示：
 
 下图表明了NJUSE酒店管理系统中，当酒店管理员填写好需要添加的用户表单时，酒店管理员业务逻辑处理的相关对象之间的协作。
 
-![addHotel动态模型](http://212.64.68.219:9090/addHotel.png)
+![](http://212.64.68.219:9090/addHotel.png)
 
 下图表明了NJUSE酒店管理系统中，当网站管理员填需要获取房间信息时，酒店管理员业务逻辑处理的相关对象之间的协作。
 
-![retrieveHotelDetails](http://212.64.68.219:9090/retireHotel.png)
+![](http://212.64.68.219:9090/retireHotel.png)
 
 下图表明了NJUSE酒店管理系统中，当管理员填需要获取命令列表时，管理员业务逻辑处理的相关对象之间的协作。
 
-![retrieveHotelDetails](http://212.64.68.219:9090/getHotelOrders.png)
+![](http://212.64.68.219:9090/getHotelOrders.png)
 
 下图表明了NJUSE酒店管理系统中，当管理员填需要查找酒店时，管理员业务逻辑处理的相关对象之间的协作。
 
-![retrieveHotelDetails](http://212.64.68.219:9090/sortHotel.png)
+![](http://212.64.68.219:9090/sortHotel.png)
 
-下图表明了NJUSE酒店管理系统中，当管理员填需要排序酒店时，管理员业务逻辑处理的相关对象之间的协作。
+下图表明了NJUSE酒店管理系统中，当管理员填需要获取某个酒店的全部房间信息时，管理员业务逻辑处理的相关对象之间的协作。
 
-![retrieveHotelDetails](http://212.64.68.219:9090/searchHotel.png)
+![](http://212.64.68.219:9090/z.png)
 
-下图表明了NJUSE酒店管理系统中，当酒店管理员填需要删除删除信息时，酒店管理员业务逻辑处理的相关对象之间的协作。
-![moveUser](http://212.64.68.219:9090/%E5%88%A0%E9%99%A4%E6%88%BF%E9%97%B4.png)
+下图表明了NJUSE酒店管理系统中，当管理员填需要添加酒店客房信息时，管理员业务逻辑处理的相关对象之间的协作。
+
+![](http://212.64.68.219:9090/x.png)
+
+下图表明了NJUSE酒店管理系统中，当管理员填需要更新房间信息时，管理员业务逻辑处理的相关对象之间的协作。
+
+![](http://212.64.68.219:9090/c.png)
+
+下图表明了NJUSE酒店管理系统中，当管理员填需要获取酒店指定房间剩余数量时，管理员业务逻辑处理的相关对象之间的协作。
+
+![](http://212.64.68.219:9090/v.png)
+
+下图表明了NJUSE酒店管理系统中，当管理员填需要删除房间时，管理员业务逻辑处理的相关对象之间的协作。
+
+![](http://212.64.68.219:9090/b.png)
+
+下图表明了NJUSE酒店管理系统中，当管理员填需要获取房间信息时，管理员业务逻辑处理的相关对象之间的协作。
+
+![](http://212.64.68.219:9090/n.png)
+
+下图表明了NJUSE酒店管理系统中，当管理员填需要选中城市和商圈后通过输入酒店名称查询时，管理员业务逻辑处理的相关对象之间的协作。
+
+![](http://212.64.68.219:9090/searchHotel.png)
+
+下图表明了NJUSE酒店管理系统中，当酒店管理员填需要选择当前城市与商圈中所有预订过的酒店时，酒店管理员业务逻辑处理的相关对象之间的协作。
+![](http://212.64.68.219:9090/%E5%88%A0%E9%99%A4%E6%88%BF%E9%97%B4.png)
 
 下图表明了NJUSE酒店管理系统中，当酒店管理员录入可用房间时，酒店管理员业务逻辑处理的相关对象之间的协作。
-![retrieveHotelRoomInfo](http://212.64.68.219:9090/%E6%8F%92%E5%85%A5%E6%88%BF%E9%97%B4%E4%BF%A1%E6%81%AF.png)
+![](http://212.64.68.219:9090/%E6%8F%92%E5%85%A5%E6%88%BF%E9%97%B4%E4%BF%A1%E6%81%AF.png)
+
 #### 4.1.4 orderbl模块
 
 ##### 需要的服务
