--- a/需求规格说明文档.md
+++ b/需求规格说明文档.md
@@ -57,13 +57,15 @@
 ### 3.1 对外接口需求
 #### 3.1.1 用户界面 
 - U:登录
-![](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E7%99%BB%E5%BD%95.png)
+![](http://212.64.68.219:9090/%E7%99%BB%E5%BD%951.png)
 - U:浏览酒店信息
-![](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%B5%8F%E8%A7%88%E9%85%92%E5%BA%97%E4%BF%A1%E6%81%AF.png)
-- U:查看订单
-![]( https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%9F%A5%E7%9C%8B%E8%AE%A2%E5%8D%95.png)
-- U:搜索酒店信息
-![](https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%90%9C%E7%B4%A2.png)
+![](http://212.64.68.219:9090/%E6%B5%8F%E8%A7%88%E9%85%92%E5%BA%97%E4%BF%A1%E6%81%AF1.png)
+- U:查看特定酒店
+![](http://212.64.68.219:9090/chakan.png)
+- U:查看个人中心
+![](http://212.64.68.219:9090/%E6%9F%A5%E7%9C%8B%E8%AE%A2%E5%8D%951.png)
+- U:筛选酒店信息
+![](http://212.64.68.219:9090/%E7%AD%9B%E9%80%89%E9%85%92%E5%BA%97%E4%BF%A1%E6%81%AF1.png)
 #### 3.1.2 通信接口
 - CI:客户端与服务器使用RMI的方式进行通信。
 
@@ -76,25 +78,23 @@
 - 刺激： 客户选择查看未执行的正常订单<br>
 - 响应： 系统跳转至显示未执行正常订单的界面<br>
 - 刺激： 客户选择撤销未执行的订单<br>
-- 响应:   系统计算出距离最短订单执行时间之差，根据时间之差修改信用值，撤销订单，将订单的状态修改为已撤销
+- 响应:  系统计算出距离最短订单执行时间之差，根据时间之差修改信用值，撤销订单，将订单的状态修改为已撤销
 ##### 3.2.1.3 相关功能需求
-![](https://image-store-se.oss-cn-shanghai.aliyuncs.com/123.png)
+![](http://212.64.68.219:9090/123.png)
 
 ##### 3.2.1.2 特征描述
 
-#### 3.2.2  搜索酒店信息用例
+#### 3.2.2  筛选酒店信息用例
 ##### 3.2.2.1 特征描述
-    客户在选择需要预订酒店的地址和商圈之后，根据自己的需求输入酒店名称、房间等关键词或选择星级、评分区间等条件进行搜索，系统根据条件生成搜索结果列表。
+    客户在选择需要预订酒店的地址和商圈之后，根据自己的需求选择星级、评分区间等条件进行搜索，系统根据条件生成搜索结果列表。
     优先级=高
 ##### 3.2.2.2 刺激/响应序列
-- 刺激：客户输入酒店名称，选择房间、星级或评分区间等条件值
+- 刺激：客户选择房间、星级或评分区间等条件值
 - 响应：系统以列表方式显示搜索结果。
 - 刺激：客户取消搜索酒店信息任务。
 - 响应：系统关闭搜索酒店信息任务。
-- 刺激：客户删除已输入条件信息。
-- 响应：系统按照剩余条件信息（未选择的按照默认值）重新生成搜索结果，以列表方式显示。
 ##### 3.2.2.3 相关功能需求
-![](https://image-store-se.oss-cn-shanghai.aliyuncs.com/Search.png)
+![](http://212.64.68.219:9090/Search.png)
 
 #### 3.2.3 注册会员用例
 ##### 3.2.3.1 特征描述
@@ -110,10 +110,10 @@
 - 刺激: 客户取消注册会员任务。
 - 响应：系统关闭注册会员任务。
 ##### 3.2.3.3 相关功能需求
-![](https://image-store-se.oss-cn-shanghai.aliyuncs.com/Member-registration.png)
+![](http://212.64.68.219:9090/Member-registration.png)
 
 
-#### 3.2.4 酒店工作人员浏览订单
+#### 3.2.4 工作人员浏览订单
 
 ##### 3.2.4.1 特征描述 
     在酒店工作人员浏览酒店的订单时，系统显示所有订单的详细信息
@@ -130,7 +130,7 @@
 - 响应：系统显示已撤销的订单
 
 ##### 3.2.4.3 相关功能需求
-![]( https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%88%AA%E5%9B%BE1.png)
+![]( http://212.64.68.219:9090/%E6%88%AA%E5%9B%BE1.png)
 
 
 #### 3.2.5 订单执行
@@ -147,27 +147,36 @@
 - 响应：系统将订单的状态改为已执行，并显示更改成功
 
 ##### 3.2.5.3 相关功能需求
-![]( https://image-store-se.oss-cn-shanghai.aliyuncs.com/%E6%88%AA%E5%9B%BE2.png)
+![]( http://212.64.68.219:9090/%E6%88%AA%E5%9B%BE2.png)
 
 
-#### 3.2.6 酒店工作人员制定酒店促销策略
+#### 3.2.6 工作人员制定酒店促销策略
 
 ##### 3.2.6.1 特征描述 
     当酒店工作人员需要制定酒店促销策略时，可自行制定和选择促销策略，系统显示促销策略的详细信息，保存新的促销策略，修改已有促销策略
     优先级=中
 
 ##### 3.2.6.2 刺激/响应序列
-- 刺激：酒店工作人员选择浏览酒店促销策略
-- 响应：系统显示酒店促销策略界面，包括生日特惠折扣、三间及以上预订特惠
-- 刺激：酒店工作人员选择制定酒店促销策略
-- 响应：系统显示酒店促销策略制定界面
-- 刺激：酒店工作人员输入策略名称和折扣（或优惠值），选择日期、面向用户和订房数量等触发条件值
-- 响应：系统以列表方式显示制定结果，并显示更改成功
-- 刺激：酒店工作人员取消制定酒店促销策略任务
-- 响应：系统关闭酒店促销策略制定界面任务
+
+-刺激：工作人员点击制定酒店促销策略
+-响应：系统进入注册会员界面，显示三个按钮“新增”、“修改”、“删除”
+-刺激：工作人员选择“新增”
+-响应：系统显示相应的界面
+-刺激：工作人员制定满足特惠的条件(生日、订房三间以上)，并制定特惠力度
+-响应：系统录入并更新此家酒店的促销信息
+-刺激：工作人员选择“修改”
+-响应：系统显示相应的界面，显示已有促销策略
+-刺激：工作人员修改满足特惠的条件(生日、订房三间以上)，并修改特惠力度
+-响应：系统录入并更新此家酒店的促销信息
+-刺激：工作人员选择“删除”
+-响应：系统显示相应的界面，显示已有促销策略
+-刺激：工作人员删除指定促销策略
+-响应：系统录入并更新此家酒店的促销信息
+-刺激：工作人员不再制定酒店促销策略
+-响应：系统退出制定酒店促销策略界面
 
 ##### 3.2.6.3 相关功能需求
-![](https://image-store-se.oss-cn-shanghai.aliyuncs.com/1.png)
+![](http://212.64.68.219:9090/1.png)
 
 
 #### 3.2.7 网站营销人员制定网站促销策略
@@ -187,7 +196,7 @@
 - 响应：系统关闭网站促销策略制定界面任务
 
 ##### 3.2.7.3 相关功能需求
-![](https://image-store-se.oss-cn-shanghai.aliyuncs.com/2.png)
+![](http://212.64.68.219:9090/2.png)
 
 
 ### 3.3 非功能需求
@@ -234,7 +243,8 @@
 - DR2:系统删除之后的订单详细数据和用户数据仍然需要存储3个月的时间，以保证历史数据的显示正确性。
 - DR3:系统需要保存更改信用值的操作记录。
 - DR4:系统删除之后的促销方案仍然需要存储一年的时间，作为之后促销活动的参考。
-
+- 系统需要存储的数据实体及其关系见下图：
+![](http://212.64.68.219:9090/shujv.png)
 
 #### 3.4.2  默认数据
 默认数据用于以下两种情况：
