feat: hotel done

--- a/需求规格说明文档.md
+++ b/需求规格说明文档.md
@@ -198,6 +198,24 @@
 ##### 3.2.7.3 相关功能需求
 ![](http://212.64.68.219:9090/2.png)
 
+#### 3.2.8 为指定用户修改用户信息
+
+##### 3.2.8.1 特征描述 
+    提供管理员浏览所有用户全部个人信息（姓名，联系方式、信用等）和修改部分信息（姓名，联系方式等）的功能
+    优先级=中
+
+##### 3.2.8.2 刺激/响应序列
+-刺激：客户选择浏览个人信息
+-响应：系统显示客户个人信息的所有类型
+-刺激：客户选择浏览个人信息类型
+-响应：系统显示该类信息的具体内容
+-刺激：客户选择修改该类信息
+-响应：系统判断可否修改，可修改则显示修改成功。不可修改则显示修改失败
+-刺激：客户选择退出详细信息页
+-响应：系统返回信息总览页面
+
+##### 3.2.8.3 相关功能需求
+![](http://212.64.68.219:9090/55.png)
 
 ### 3.3 非功能需求
 
